# wasmsh

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORTED.md  agent_utilities.md  bash.md  bash4_implementation_gaps.md  clippy.toml  deny.toml  implementation_gap.md  implementation_gaps.md  justfile  missing_perf_tuning.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ptc_suspend_resume.md  rust-toolchain.toml  sonar-project.properties
.config/: nextest.toml
.github/workflows/: ci.yml  examples-test.yml  images-dev.yml  langchain-adapters-llm.yml  langchain-adapters-publish.yml  langchain-adapters.yml  pyodide.yml  release.yml  remote-sandbox-e2e.yml  runner-dispatcher.yml  snapshot-runner.yml  sonar.yml  wasm-build.yml
crates/wasmsh-ast/: Cargo.toml  README.md
crates/wasmsh-browser/: Cargo.toml  README.md
crates/wasmsh-browser/benches/: pipeline_bench.rs
crates/wasmsh-browser/src/: lib.rs
crates/wasmsh-browser/tests/: network_security.rs
crates/wasmsh-builtins/: Cargo.toml  README.md
crates/wasmsh-builtins/src/: lib.rs
crates/wasmsh-component/: Cargo.toml  build.rs
crates/wasmsh-component/src/: bindings.rs  core.rs  event.rs  lib.rs  python.rs
crates/wasmsh-component/src/python/: python_cmd.rs  wasi_component_shim.c
crates/wasmsh-component/tests/: json_transport_contract.rs
crates/wasmsh-component/wit/: world.wit
crates/wasmsh-dispatcher/: Cargo.toml  README.md
crates/wasmsh-dispatcher/src/: lib.rs  main.rs  service.rs
crates/wasmsh-dispatcher/tests/: drain_mode.rs  health_contract.rs  router_order.rs  service_http.rs  session_affinity.rs
crates/wasmsh-expand/: Cargo.toml  README.md
crates/wasmsh-expand/benches/: expand_bench.rs
crates/wasmsh-expand/src/: lib.rs
crates/wasmsh-fs/: Cargo.toml  README.md
crates/wasmsh-fs/src/: emscripten_fs.rs  lib.rs  memfs.rs  opfs.rs
crates/wasmsh-fs/tests/: backend_selection.rs
crates/wasmsh-hir/: Cargo.toml  README.md
crates/wasmsh-hir/src/: lib.rs  lower.rs
crates/wasmsh-ir/: Cargo.toml  README.md
crates/wasmsh-ir/src/: lib.rs
crates/wasmsh-json-bridge/: Cargo.toml  README.md
crates/wasmsh-json-bridge/src/: lib.rs
crates/wasmsh-lex/: Cargo.toml  README.md
crates/wasmsh-lex/src/: lib.rs
crates/wasmsh-parse/: Cargo.toml  README.md
crates/wasmsh-parse/benches/: parse_bench.rs
crates/wasmsh-parse/src/: lib.rs  word_parser.rs
crates/wasmsh-parse/tests/: property_tests.proptest-regressions  property_tests.rs
crates/wasmsh-protocol/: Cargo.toml  README.md
crates/wasmsh-protocol/src/: lib.rs
crates/wasmsh-protocol/tests/: wit_contract.rs
crates/wasmsh-protocol/wit/: worker-protocol.wit
crates/wasmsh-pyodide/: Cargo.toml
crates/wasmsh-pyodide-probe/: Cargo.toml
crates/wasmsh-pyodide-probe/src/: lib.rs
crates/wasmsh-pyodide/src/: lib.rs  network.rs  probe.rs  python_cmd.rs  python_membrane.rs
crates/wasmsh-runtime/: Cargo.toml
crates/wasmsh-runtime/src/: dbl_bracket.rs  fd_table.rs  lib.rs  pattern.rs  signals.rs  streaming_cut.rs  streaming_grep.rs  streaming_sed.rs  streaming_tr.rs  streaming_uniq.rs
crates/wasmsh-runtime/tests/: runtime_protocol.rs  shared_io.rs
crates/wasmsh-runtime/tests/common/: mod.rs
crates/wasmsh-state/: Cargo.toml  README.md
crates/wasmsh-state/src/: lib.rs
crates/wasmsh-testkit/: Cargo.toml  README.md
crates/wasmsh-testkit/src/: compat.rs  features.rs  lib.rs  oracle.rs  runner.rs  toml_case.rs
crates/wasmsh-testkit/tests/: invariants.rs  suite_runner.rs
crates/wasmsh-utils/: Cargo.toml  README.md
crates/wasmsh-utils/src/: archive_ops.rs  awk_ops.rs  binary_ops.rs  data_ops.rs  diff_ops.rs  disk_ops.rs  file_ops.rs  hash_ops.rs  helpers.rs  jaq_runner.rs  jq_ops.rs  lib.rs  math_ops.rs  net_multipart.rs  net_ops.rs  net_types.rs  regex_posix.rs  search_ops.rs  system_ops.rs  text_ops.rs  tree_ops.rs  trivial_ops.rs  yaml_ops.rs
crates/wasmsh-vm/: Cargo.toml  README.md
crates/wasmsh-vm/src/: lib.rs  pipe.rs
deploy/docker/: .env.example  Caddyfile  Dockerfile.dispatcher  Dockerfile.dispatcher.dockerignore  Dockerfile.runner  Dockerfile.runner.dockerignore  README.md  compose.caddy.yml  compose.dispatcher-test.yml  compose.yml
deploy/k8s/: dispatcher-deployment.yaml  hpa.yaml  networkpolicy.yaml  runner-deployment.yaml  services.yaml
docs/adr/: ADR-0001-clean-room-boundary.md  ADR-0002-browser-first-wasm-target.md  ADR-0003-handwritten-parser.md  ADR-0004-word-ast-and-expansion-phases.md  ADR-0005-hir-ir-vm.md  ADR-0006-capability-vfs-and-opfs.md  ADR-0007-command-model.md  ADR-0008-worker-runtime.md  ADR-0009-budgets-cancellation.md  ADR-0010-compatibility-baseline.md  ADR-0011-testing-differential-oracles.md  ADR-0012-project-license-and-dependency-policy.md  ADR-0013-diagnostics-and-error-model.md  ADR-0014-embedded-interpreters.md  ADR-0015-clean-room-hashes.md  ADR-0016-wasm-build-distribution.md  ADR-0017-shared-runtime-extraction.md  ADR-0017-utility-registry.md  ADR-0018-pyodide-same-module.md  ADR-0019-dual-target-packaging.md  ADR-0020-e2e-first-testing.md  adr-0021-network-capability.md  adr-0022-regex-engine.md  adr-0023-library-adoption.md  adr-0024-hashes-via-rustcrypto.md  adr-0025-compression-via-miniz-oxide.md  adr-0026-jq-via-jaq.md  (+6 more)
docs/guides/: index.md  (+7 more)
examples/rust/: Cargo.toml  README.md
examples/rust/src/: main.rs
fuzz/: Cargo.toml
fuzz/corpus/: seed_and_or  seed_arith  seed_arith_postinc  seed_array  seed_brace_group  seed_case  seed_double_bracket  seed_for_loop  seed_function  seed_if_then  seed_multi_cmd  seed_param_default  seed_param_length  seed_param_subst  seed_pipe  seed_redirect_in  seed_redirect_out  seed_subshell  seed_unclosed_double_quote  seed_unclosed_single_quote  seed_while
fuzz/fuzz_targets/: fuzz_expand.rs  fuzz_lexer.rs  fuzz_parser.rs  fuzz_pipeline.rs
tools/: bump-version.sh  verify-helm.sh  verify-scalable-pack.sh
tools/component-host-runner/: Cargo.toml
tools/component-host-runner/src/: main.rs
tools/pyodide-wasi-host-runner/: Cargo.toml
tools/pyodide-wasi-host-runner/src/: main.rs
(+803 files in other folders)
