[workspace]
resolver = "2"
exclude = ["fuzz", "crates/wasmsh-pyodide-probe", "crates/wasmsh-pyodide"]
members = [
    "crates/wasmsh-ast",
    "crates/wasmsh-lex",
    "crates/wasmsh-parse",
    "crates/wasmsh-expand",
    "crates/wasmsh-hir",
    "crates/wasmsh-ir",
    "crates/wasmsh-vm",
    "crates/wasmsh-state",
    "crates/wasmsh-fs",
    "crates/wasmsh-builtins",
    "crates/wasmsh-utils",
    "crates/wasmsh-runtime",
    "crates/wasmsh-browser",
    "crates/wasmsh-protocol",
    "crates/wasmsh-testkit",
]

[workspace.package]
version = "0.4.1"
edition = "2021"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/mayflower/wasmsh"
description = "Browser-first shell runtime with Bash-compatible syntax"
keywords = ["shell", "bash", "wasm", "parser", "sandbox"]
categories = ["command-line-utilities", "wasm", "parser-implementations"]
homepage = "https://github.com/mayflower/wasmsh"
documentation = "https://github.com/mayflower/wasmsh"

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
smol_str = "0.3"
smallvec = "1"
indexmap = "2"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
url = "2"
ureq = "2"

# Internal crates (version + path: path is used locally, version for crates.io)
wasmsh-ast = { version = "0.4.1", path = "crates/wasmsh-ast" }
wasmsh-lex = { version = "0.4.1", path = "crates/wasmsh-lex" }
wasmsh-parse = { version = "0.4.1", path = "crates/wasmsh-parse" }
wasmsh-expand = { version = "0.4.1", path = "crates/wasmsh-expand" }
wasmsh-hir = { version = "0.4.1", path = "crates/wasmsh-hir" }
wasmsh-ir = { version = "0.4.1", path = "crates/wasmsh-ir" }
wasmsh-vm = { version = "0.4.1", path = "crates/wasmsh-vm" }
wasmsh-state = { version = "0.4.1", path = "crates/wasmsh-state" }
wasmsh-fs = { version = "0.4.1", path = "crates/wasmsh-fs" }
wasmsh-builtins = { version = "0.4.1", path = "crates/wasmsh-builtins" }
wasmsh-utils = { version = "0.4.1", path = "crates/wasmsh-utils" }
wasmsh-runtime = { version = "0.4.1", path = "crates/wasmsh-runtime" }
wasmsh-browser = { version = "0.4.1", path = "crates/wasmsh-browser" }
wasmsh-protocol = { version = "0.4.1", path = "crates/wasmsh-protocol" }
wasmsh-testkit = { version = "0.4.1", path = "crates/wasmsh-testkit" }

# ── Workspace Lints ──────────────────────────────────────────

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# Pedantic baseline
pedantic = { level = "warn", priority = -1 }

# Silence noisy pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
similar_names = "allow"
needless_lifetimes = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
if_not_else = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"

# Promote important lints
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
unwrap_or_default = "warn"

# Prevent accidental debug output in library code
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"

# ── Profiles ─────────────────────────────────────────────────

[profile.dev]
debug = "line-tables-only"

[profile.release]
lto = "thin"
codegen-units = 16

[profile.dist]
inherits = "release"
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = "symbols"
