[workspace]
resolver = "2"
exclude = ["fuzz", "crates/wasmsh-pyodide-probe", "crates/wasmsh-pyodide"]
members = [
    "crates/wasmsh-ast",
    "crates/wasmsh-lex",
    "crates/wasmsh-parse",
    "crates/wasmsh-expand",
    "crates/wasmsh-hir",
    "crates/wasmsh-ir",
    "crates/wasmsh-vm",
    "crates/wasmsh-state",
    "crates/wasmsh-fs",
    "crates/wasmsh-builtins",
    "crates/wasmsh-utils",
    "crates/wasmsh-runtime",
    "crates/wasmsh-browser",
    "crates/wasmsh-component",
    "crates/wasmsh-json-bridge",
    "crates/wasmsh-protocol",
    "crates/wasmsh-testkit",
]

[workspace.package]
version = "0.5.9"
edition = "2021"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/mayflower/wasmsh"
description = "Browser-first shell runtime with Bash-compatible syntax"
keywords = ["shell", "bash", "wasm", "parser", "sandbox"]
categories = ["command-line-utilities", "wasm", "parser-implementations"]
homepage = "https://github.com/mayflower/wasmsh"
documentation = "https://github.com/mayflower/wasmsh"

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
smol_str = "0.3"
smallvec = "1"
indexmap = "2"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
url = "2"
ureq = "2"
# POSIX BRE/ERE regex engine — used by sed, grep, awk.  no_std, zero
# runtime deps, MIT licensed.  See ADR-0022 and ADR-0023.
posix-regex = "0.1"
# Base64 encoder/decoder — replaces handwritten impl.  no_std,
# zero deps, MIT/Apache.  See ADR-0023.
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
# Hex encoder/decoder — replaces handwritten impl.  no_std, zero
# deps, MIT/Apache.  See ADR-0023.
hex = { version = "0.4", default-features = false, features = ["alloc"] }
# RustCrypto hash primitives — audited, constant-time, wasm-ready.
# Replaces handwritten MD5/SHA-1/SHA-256/SHA-512 implementations.
# MIT/Apache, no_std with `alloc`.  See ADR-0024 (which supersedes
# ADR-0015).
md-5 = { version = "0.10", default-features = false }
sha1 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false }
# DEFLATE / gzip engine — pure Rust port of miniz.  Used via a thin
# gzip header/trailer wrapper by gzip/gunzip/zcat and by tar -z.
# MIT / Apache-2 / Zlib, no_std with alloc.  See ADR-0025.
miniz_oxide = { version = "0.8", default-features = false, features = ["with-alloc"] }
# jq filter-language interpreter — audited pure-Rust reimplementation.
# MIT, no_std-friendly, wasm32 verified.  See ADR-0026.
jaq-core = { version = "2" }
jaq-std = { version = "2" }
jaq-json = { version = "1", features = ["parse"] }
hifijson = { version = "0.2" }
# YAML 1.2 parser — pure Rust, no_std-friendly.  Used by yq to
# parse input and emit output in the shared jaq Val space.  See
# ADR-0027.
saphyr = "0.0.6"
# Needed so yaml_ops can construct `jaq_json::Val::Obj` values
# with the same hasher jaq-json uses internally (foldhash::fast).
foldhash = { version = "0.1", default-features = false }
# ZIP archive reader/writer.  We only use its reader side today, via
# `ZipArchive`.  The `deflate` feature pulls `flate2/rust_backend` +
# `zopfli` (pure-Rust write-side optimisation — wasmsh doesn't use
# the writer but the feature toggle is coarse).  All MIT/Apache-2,
# no C code, no `std::fs` pressure.  See ADR-0028.
zip = { version = "2", default-features = false, features = ["deflate"] }

# Internal crates. The `version` field is consumed by `cargo publish` and
# the `path` field by local workspace builds.  Kept in lockstep with the
# [workspace.package].version above — `tools/bump-version.sh` bumps both.
wasmsh-ast = { version = "0.5.9", path = "crates/wasmsh-ast" }
wasmsh-lex = { version = "0.5.9", path = "crates/wasmsh-lex" }
wasmsh-parse = { version = "0.5.9", path = "crates/wasmsh-parse" }
wasmsh-expand = { version = "0.5.9", path = "crates/wasmsh-expand" }
wasmsh-hir = { version = "0.5.9", path = "crates/wasmsh-hir" }
wasmsh-ir = { version = "0.5.9", path = "crates/wasmsh-ir" }
wasmsh-vm = { version = "0.5.9", path = "crates/wasmsh-vm" }
wasmsh-state = { version = "0.5.9", path = "crates/wasmsh-state" }
wasmsh-fs = { version = "0.5.9", path = "crates/wasmsh-fs" }
wasmsh-builtins = { version = "0.5.9", path = "crates/wasmsh-builtins" }
wasmsh-utils = { version = "0.5.9", path = "crates/wasmsh-utils" }
wasmsh-runtime = { version = "0.5.9", path = "crates/wasmsh-runtime" }
wasmsh-browser = { version = "0.5.9", path = "crates/wasmsh-browser" }
wasmsh-component = { version = "0.5.9", path = "crates/wasmsh-component" }
wasmsh-json-bridge = { version = "0.5.9", path = "crates/wasmsh-json-bridge" }
wasmsh-protocol = { version = "0.5.9", path = "crates/wasmsh-protocol" }
wasmsh-testkit = { version = "0.5.9", path = "crates/wasmsh-testkit" }

# ── Workspace Lints ──────────────────────────────────────────

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# Pedantic baseline
pedantic = { level = "warn", priority = -1 }

# Silence noisy pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
similar_names = "allow"
needless_lifetimes = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
if_not_else = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"

# Promote important lints
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
unwrap_or_default = "warn"

# Prevent accidental debug output in library code
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"

# ── Profiles ─────────────────────────────────────────────────

[profile.dev]
debug = "line-tables-only"

[profile.release]
lto = "thin"
codegen-units = 16

[profile.dist]
inherits = "release"
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = "symbols"
