[package]
name = "wasmsh-browser"
description = "Browser Web Worker integration for wasmsh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["browser-core"]
browser-core = []
browser-extended = ["browser-core", "wasmsh-fs/opfs"]

[dependencies]
wasmsh-runtime = { workspace = true }
wasmsh-protocol = { workspace = true }
wasmsh-fs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
wasmsh-protocol = { workspace = true }

[[bench]]
name = "pipeline_bench"
harness = false

[package.metadata.cargo-machete]
ignored = ["serde", "wasmsh-fs"]  # serde: wasm32 only; wasmsh-fs: feature flag forwarding

[lints]
workspace = true
