[package]
name = "wasmsh-component"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"
description = "WASI P2 Component Model adapter for the wasmsh runtime. Exposes a stateful session resource as the first wasmCloud-facing transport."
keywords = ["shell", "wasm", "wasmcloud", "component-model", "wasi"]
categories = ["wasm", "command-line-utilities"]

[lib]
# cdylib lets us emit a Wasm core module from `cargo build --target
# wasm32-wasip2`. On wasip2 the toolchain then wraps it into a
# Component Model component automatically.
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable the `component-export` feature to compile the `wit-bindgen`-generated
# component export layer. It is gated so host-native unit tests can link the
# crate on any target without pulling the wasip2-only bindings path.
component-export = ["dep:wit-bindgen"]

[dependencies]
libc = "0.2"
wasmsh-fs = { workspace = true, features = ["emscripten"] }
wasmsh-json-bridge.workspace = true
wasmsh-protocol.workspace = true
wasmsh-runtime.workspace = true
# Already pinned transitively by `wasi` — re-declared here so the
# `component-export` feature can opt in to the `generate!` macro without
# adding a second major version to the lockfile.
wit-bindgen = { version = "0.51", optional = true }

[dev-dependencies]
serde_json.workspace = true

[package.metadata.cargo-machete]
ignored = ["wasmsh-fs", "wasmsh-runtime"]

[lints]
workspace = true
