[package]
name = "wasmsh-expand"
description = "Word expansion engine for the wasmsh shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
wasmsh-ast = { workspace = true }
wasmsh-state = { workspace = true }
smol_str = { workspace = true }

[lints]
workspace = true
