[package]
name = "wasmsh-expand"
description = "Word expansion engine for the wasmsh shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wasmsh-ast = { workspace = true }
wasmsh-state = { workspace = true }
smol_str = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
wasmsh-state = { workspace = true }
wasmsh-ast = { workspace = true }

[[bench]]
name = "expand_bench"
harness = false

[lints]
workspace = true
