[package]
name = "wasmsh-fs"
description = "Virtual filesystem abstraction for wasmsh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
opfs = []

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true
