[package]
name = "wasmsh-fs"
description = "Virtual filesystem abstraction for wasmsh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
opfs = []
emscripten = ["libc"]

[dependencies]
thiserror = { workspace = true }
libc = { version = "0.2", optional = true }

[lints]
workspace = true
