[package]
name = "wasmsh-hir"
description = "High-level intermediate representation for the wasmsh shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
wasmsh-ast = { workspace = true }
smol_str = { workspace = true }

[dev-dependencies]
wasmsh-parse = { workspace = true }

[lints]
workspace = true
