[package]
name = "wasmsh-ir"
description = "Linear instruction representation for the wasmsh VM"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
smol_str = { workspace = true }
wasmsh-ast = { workspace = true }
wasmsh-hir = { workspace = true }

[dev-dependencies]
wasmsh-parse = { workspace = true }

[lints]
workspace = true
