[package]
name = "wasmsh-lex"
description = "Stateful lexer for the wasmsh shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wasmsh-ast = { workspace = true }
smol_str = { workspace = true }

[lints]
workspace = true
