[package]
name = "wasmsh-protocol"
description = "Message protocol for communication between wasmsh worker and host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
wit-parser = "0.244"

[lints]
workspace = true
