[package]
name = "wasmsh-pyodide-probe"
description = "Minimal emscripten probe — proves wasmsh compiles for wasm32-unknown-emscripten"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/mayflower/wasmsh"

[lib]
crate-type = ["staticlib"]

[dependencies]
wasmsh-protocol = { path = "../wasmsh-protocol" }
libc = "0.2"

[lints.rust]
# C ABI function requires unsafe (raw pointer return)
unsafe_code = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
