[package]
name = "wasmsh-pyodide-probe"
description = "Minimal emscripten probe — proves wasmsh compiles for wasm32-unknown-emscripten"
version = "0.6.2"
edition = "2021"
rust-version = "1.89"
license = "Apache-2.0"
repository = "https://github.com/mayflower/wasmsh"

[lib]
crate-type = ["staticlib"]

[dependencies]
wasmsh-json-bridge = { path = "../wasmsh-json-bridge" }
wasmsh-protocol = { path = "../wasmsh-protocol" }
libc = "0.2"

[package.metadata.cargo-machete]
ignored = ["libc", "wasmsh-protocol"]

[lints.rust]
# C ABI function requires unsafe (raw pointer return)
unsafe_code = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
