[package]
name = "wasmsh-runtime"
description = "Shared shell runtime core for wasmsh (standalone and Pyodide builds)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wasmsh-ast = { workspace = true }
wasmsh-protocol = { workspace = true }
wasmsh-parse = { workspace = true }
wasmsh-hir = { workspace = true }
wasmsh-ir = { workspace = true }
wasmsh-expand = { workspace = true }
wasmsh-vm = { workspace = true }
wasmsh-state = { workspace = true }
wasmsh-fs = { workspace = true }
wasmsh-utils = { workspace = true }
wasmsh-builtins = { workspace = true }
smol_str = { workspace = true }
indexmap = { workspace = true }

[lints]
workspace = true
