[package]
name = "wasmsh-state"
description = "Shell state management (variables, scopes, frames) for wasmsh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
indexmap = { workspace = true }
smol_str = { workspace = true }

[lints]
workspace = true
