[package]
name = "wasmsh-testkit"
description = "Test utilities, TOML test runner, and compatibility harness for wasmsh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wasmsh-parse = { workspace = true }
wasmsh-hir = { workspace = true }
wasmsh-browser = { workspace = true }
wasmsh-protocol = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
