[package]
name = "wasmsh-utils"
description = "Browser-safe standard utility commands for wasmsh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wasmsh-fs = { workspace = true }
wasmsh-state = { workspace = true }
indexmap = { workspace = true }

[lints]
workspace = true
