[package]
name = "wasmsh-utils"
description = "Browser-safe standard utility commands for wasmsh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wasmsh-fs = { workspace = true }
wasmsh-state = { workspace = true }
indexmap = { workspace = true }
url = { workspace = true }
posix-regex = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
md-5 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
digest = { workspace = true }
miniz_oxide = { workspace = true }
jaq-core = { workspace = true }
jaq-std = { workspace = true }
jaq-json = { workspace = true }
hifijson = { workspace = true }
saphyr = { workspace = true }
foldhash = { workspace = true }
zip = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["md-5", "digest"]

[lints]
workspace = true
